--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MONGODB_URL = "mongodb+srv://muhammadkashif:Va30BMCaKk7cHbAL@cluster0.udcqajm.mongodb.net/tour_db?retryWrites=true&w=majority"
 
 PORT = 5000
+
+FRONTEND_URL="http://192.168.100.4:5000"
