--- a/TourApp/package.json
+++ b/TourApp/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "axios": "0.27.2",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.3",
     "react-native-safe-area-context": "^4.4.1",
