--- a/TourApp/package.json
+++ b/TourApp/package.json
@@ -16,6 +16,9 @@
     "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.3",
+    "react-native-autocomplete-tags": "^2.0.0",
+    "react-native-document-picker": "^8.1.2",
+    "react-native-image-base64": "^0.1.4",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
